# DES-Python

./: .gitignore  Constants.py  DES.py  README.md  driver.py  pyproject.toml  test.py
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml  pylint.yml  python-app.yml  release.yaml
des/: DES.py  constants.py  triple_DES.py
src/des_PurePy/: __init__.py  constants.py  des.py
tests/: functionality_test.py
