[project]
name = "des_PurePy"
version = "1.0.8"
authors = [
    { name="Luna Perez-Herrera", email="lunaperezherrer@gmail.com" },
]
description = "A pure python implementation of DES"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "AGPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Perez-Herrera-Luna/DES-Python"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.pytest]
testpaths = ["tests"]